PCS BAckup 26Dec2023/Backup-Source/objects/GCP_PMP_Order_Data__c.object
<CustomObject>
    <fields>
        <fullName>Vision_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>GCP PMP Order Data</relationshipLabel>
        <relationshipName>GCP_PMP_Order_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Unique_Identifier__c</fullName>
        <label>GCP Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_base_uom__c</fullName>
        <label>GCP Base UOM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_bill_of_lading__c</fullName>
        <label>GCP Bill of Lading</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_cal_day__c</fullName>
        <label>GCP Cal Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vision_gcp_city__c</fullName>
        <label>GCP City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_country__c</fullName>
        <label>GCP Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_created_date__c</fullName>
        <label>GCP Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vision_gcp_currency__c</fullName>
        <label>GCP Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_customer_code__c</fullName>
        <label>GCP Customer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_customer_hierarchy__c</fullName>
        <label>GCP Customer Hierarchy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_customer_material__c</fullName>
        <label>GCP Customer Material</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_customer_po__c</fullName>
        <label>GCP Customer Po</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_delivery_date__c</fullName>
        <label>GCP Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vision_gcp_delivery_item__c</fullName>
        <label>GCP Delivery Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_delivery_qty__c</fullName>
        <label>GCP Delivery Quantity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vision_gcp_description__c</fullName>
        <label>GCP Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_distribution_channel__c</fullName>
        <label>GCP Distribution Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_division__c</fullName>
        <label>GCP Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_division_code__c</fullName>
        <label>GCP Division Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_doc_item__c</fullName>
        <label>GCP Doc Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_goods_issue_date__c</fullName>
        <label>GCP Goods Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vision_gcp_handling_quantity__c</fullName>
        <label>GCP Handling Quantity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vision_gcp_invoice_number__c</fullName>
        <label>GCP Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_long_desc__c</fullName>
        <label>GCP Long Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_material_code__c</fullName>
        <label>GCP Material Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_medium_description__c</fullName>
        <label>GCP Medium Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_ndc_code__c</fullName>
        <label>NDC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_ndc_desc__c</fullName>
        <label>NDC Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_net_amount__c</fullName>
        <label>GCP Net Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vision_gcp_net_value__c</fullName>
        <label>GCP Net Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vision_gcp_net_weight__c</fullName>
        <label>GCP Net Weight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_open_order_qty__c</fullName>
        <label>GCP Open Order Quantity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vision_gcp_order_date__c</fullName>
        <label>GCP Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vision_gcp_order_number__c</fullName>
        <label>GCP Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_order_qty__c</fullName>
        <label>GCP Order Quantity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vision_gcp_order_status__c</fullName>
        <label>GCP Order Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_plant__c</fullName>
        <label>GCP Plant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_po_date__c</fullName>
        <label>PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vision_gcp_postal_code__c</fullName>
        <label>GCP Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_record_mode__c</fullName>
        <label>GCP Record Mode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_reference_doc__c</fullName>
        <label>GCP Reference Doc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_reference_item__c</fullName>
        <label>GCP Reference Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_region__c</fullName>
        <label>GCP Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_rejection_reason__c</fullName>
        <label>GCP Rejection Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_requested_delivery_date__c</fullName>
        <label>GCP Requested Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vision_gcp_sales_doc_type__c</fullName>
        <label>GCP Sales Doc Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_sales_org__c</fullName>
        <label>GCP Sales Org</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_sales_unit__c</fullName>
        <label>GCP Sales Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_sold_to_customer_code__c</fullName>
        <label>GCP Sold to Customer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_sold_to_customer_name__c</fullName>
        <label>GCP Sold to Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_street__c</fullName>
        <label>GCP Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_track__c</fullName>
        <label>GCP Track</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_uom__c</fullName>
        <label>GCP UOM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_weight_unit__c</fullName>
        <label>GCP Weight Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_gcp_zatpqty__c</fullName>
        <label>GCP Zatpqty</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vision_product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vision Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>GCP PMP Order Data</relationshipLabel>
        <relationshipName>GCP_PMP_Order_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>GCP PMP Order Data</label>
    <nameField>
        <displayFormat>pmp-ord-{00000}</displayFormat>
        <label>GCP PMP Order Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GCP PMP Order Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>